# Qt_project_use_static_dll

./: CMakeLists.txt  main.cpp
